criação da primeira parte da home

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <main>
+    <main class="historia">
+        <img src="assets/img/fundo-rainha.svg" id="rainha" alt="">
         <nav>
             <div class="logo">
                 <img src="assets/img/LOGO.svg">
@@ -25,6 +26,26 @@
                 <button class="cadastro">Cadastrar</button>
             </div>
         </nav>
+        <div class="linha">
+            <section class="texto">
+                <h1>O Jogo dos Reis: A História do Xadrez</h1>
+                <p>Desde seus humildes começos na Índia até se tornar um fenômeno global, o xadrez tem cativado mentes
+                    ao longo dos séculos. Esse jogo de estratégia, considerado um "esporte mental", não só desafiou
+                    grandes pensadores, mas também foi testemunha de revoluções culturais e avanços tecnológicos.
+                    Acompanhe-nos em uma jornada fascinante pela história deste jogo dos reis que continua sendo tão
+                    relevante hoje quanto era há mil anos.</p>
+            </section>
+            <section class="imagem">
+                <img src="assets/img/reis_img.png">
+            </section>
+        </div>
+    </main>
+    <main class="europa">
+        <div class="filtro">
+            <section>
+                <h1>O Xadrez Chega à Europa</h1>
+            </section>
+        </div>
     </main>
 </body>
 
