criação da segunda parte da home

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -44,6 +44,7 @@
         <div class="filtro">
             <section>
                 <h1>O Xadrez Chega à Europa</h1>
+                <p>Desde seus humildes começos na Índia até se tornar um fenômeno global, o xadrez tem cativado mentes ao longo dos séculos. Esse jogo de estratégia, considerado um "esporte mental", não só desafiou grandes pensadores, mas também foi testemunha de revoluções culturais e avanços tecnológicos. Acompanhe-nos em uma jornada fascinante pela história deste jogo dos reis que continua sendo tão relevante hoje quanto era há mil anos.</p>
             </section>
         </div>
     </main>
