criação da terceria parte da home

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -44,7 +44,23 @@
         <div class="filtro">
             <section>
                 <h1>O Xadrez Chega à Europa</h1>
-                <p>Desde seus humildes começos na Índia até se tornar um fenômeno global, o xadrez tem cativado mentes ao longo dos séculos. Esse jogo de estratégia, considerado um "esporte mental", não só desafiou grandes pensadores, mas também foi testemunha de revoluções culturais e avanços tecnológicos. Acompanhe-nos em uma jornada fascinante pela história deste jogo dos reis que continua sendo tão relevante hoje quanto era há mil anos.</p>
+                <p>Desde seus humildes começos na Índia até se tornar um fenômeno global, o xadrez tem cativado mentes
+                    ao longo dos séculos. Esse jogo de estratégia, considerado um "esporte mental", não só desafiou
+                    grandes pensadores, mas também foi testemunha de revoluções culturais e avanços tecnológicos.
+                    Acompanhe-nos em uma jornada fascinante pela história deste jogo dos reis que continua sendo tão
+                    relevante hoje quanto era há mil anos.</p>
+            </section>
+        </div>
+    </main>
+    <main class="persia">
+        <img src="assets/img/fundo_torre.svg" id="torre" alt="">
+        <div class="linha">
+            <section class="texto">
+                <h1>O Caminho para o Oeste: Pérsia</h1>
+                <p>Quando os muçulmanos invadiram a Pérsia, o jogo passou a ser chamado de shatranj, mas sem deixar de passar por algumas mudanças em suas regras. Foi nesta etapa que nasceram conceitos cruciais como o "xeque-mate", derivado da expressão persa shāh māt, que significa "o rei está indefeso". Com o comércio e as conquistas, o xadrez foi se expandindo por todo o mundo árabe, onde as regras foram aprimoradas e o jogo começou a se tornar mais popular.</p>
+            </section>
+            <section class="imagem">
+                <img src="assets/img/persia_img.jpg">
             </section>
         </div>
     </main>
