finalização da tela home

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -57,10 +57,42 @@
         <div class="linha">
             <section class="texto">
                 <h1>O Caminho para o Oeste: Pérsia</h1>
-                <p>Quando os muçulmanos invadiram a Pérsia, o jogo passou a ser chamado de shatranj, mas sem deixar de passar por algumas mudanças em suas regras. Foi nesta etapa que nasceram conceitos cruciais como o "xeque-mate", derivado da expressão persa shāh māt, que significa "o rei está indefeso". Com o comércio e as conquistas, o xadrez foi se expandindo por todo o mundo árabe, onde as regras foram aprimoradas e o jogo começou a se tornar mais popular.</p>
+                <p>Quando os muçulmanos invadiram a Pérsia, o jogo passou a ser chamado de shatranj, mas sem deixar de
+                    passar por algumas mudanças em suas regras. Foi nesta etapa que nasceram conceitos cruciais como o
+                    "xeque-mate", derivado da expressão persa shāh māt, que significa "o rei está indefeso". Com o
+                    comércio e as conquistas, o xadrez foi se expandindo por todo o mundo árabe, onde as regras foram
+                    aprimoradas e o jogo começou a se tornar mais popular.</p>
             </section>
             <section class="imagem">
                 <img src="assets/img/persia_img.jpg">
+            </section>
+        </div>
+    </main>
+    <main class="tres">
+        <img src="assets/img/fundo-rei.svg" id="rei" alt="">
+        <div class="linha">
+            <section class="imagem">
+                <img src="assets/img/eurpoa_img.png">
+            </section>
+            <section class="texto">
+                <h1>O Xadrez Chega à Europa</h1>
+                <p>Graças à expansão do Império Islâmico, o xadrez chegou à Europa através da Espanha e da Itália. Na
+                    Europa, as regras foram refinadas, e as peças começaram a adquirir os movimentos que reconhecemos
+                    hoje. No entanto, foi no século XV que o xadrez passou por uma revolução: a peça da dama (ou rainha)
+                    passou de ser uma figura fraca para se tornar a peça mais poderosa do tabuleiro, alterando
+                    completamente a dinâmica do jogo.</p>
+            </section>
+        </div>
+    </main>
+        <main class="moderno">
+        <div class="filtro">
+            <section>
+                <h1>O Xadrez Chega à Europa</h1>
+                <p>Desde seus humildes começos na Índia até se tornar um fenômeno global, o xadrez tem cativado mentes
+                    ao longo dos séculos. Esse jogo de estratégia, considerado um "esporte mental", não só desafiou
+                    grandes pensadores, mas também foi testemunha de revoluções culturais e avanços tecnológicos.
+                    Acompanhe-nos em uma jornada fascinante pela história deste jogo dos reis que continua sendo tão
+                    relevante hoje quanto era há mil anos.</p>
             </section>
         </div>
     </main>
