--- a/Website/public/cadastro.html
+++ b/Website/public/cadastro.html
@@ -9,46 +9,46 @@
 </head>
 
 <body>
-    <div class="coluna">
-        <nav>
-            <img class="logo" src="assets/img/LOGO-preta.svg" alt="">
-        </nav>
-        <div class="linha">
-            <main class="formulario">
-                <div class="form">
-                    <h2>Bem-Vindo</h2>
-                    <h1>Cadastra-se</h1>
 
-                    <label for="">Email:</label>
-                    <input type="text" placeholder="Ex: usuario123@gmail.com">
-
-                    <label for="">Nome de usúario</label>
-                    <input type="text" placeholder="Coloque seu nome de usúario">
-
-                    <label for="">Senha</label>
-                    <input type="text" placeholder="Define sua senha">
-
-                    <div class="linha">
-                        <label>Sexo</label>
-                        <label for="">Data de Nascimento</label>
-                    </div>
-                    <div class="linha">
-                        <select name="" id="">
-                            <option value="">Feminino</option>
-                            <option value="">Masculina</option>
-                        </select>
-                        <input type="text">
-                    </div>
-
-                    <button>Criar conta</button>
-                    <p>Já possuí uma conta? <a href="assets/">Entre</a></p>
+    <button class="voltar">
+        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M6 12H18M6 12L11 7M6 12L11 17" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+    </button>
+    <main class="main_formulario">
+        <div class="formulario">
+            <h2>Bem-Vindo</h2>
+            <h1>Cadastra-se</h1>
+            <label for="">Email:</label>
+            <input type="text" placeholder="Ex: usuario123@gmail.com">
+            <label for="">Nome de usúario</label>
+            <input type="text" placeholder="Coloque seu nome de usúario">
+            <label for="">Senha</label>
+            <input type="text" placeholder="Define sua senha">
+            <p>Contém pelo menos 8 caracter </p>
+            <p>Contém pelo menos um caracter especial </p>
+            <p>Contém pelo menos um caracter maiúsculo </p>
+            <div class="caixa-pai">
+                <div class="caixa">
+                    <label>Sexo</label>
+                    <select name="" id="">
+                        <option value="">Feminino</option>
+                        <option value="">Masculina</option>
+                    </select>
                 </div>
-            </main>
-            <main class="imagem">
-                <img src="assets/img/pecas-fundo.png" alt="">
-            </main>
+                <div class="caixa">
+                    <label for="">Data de Nascimento</label>
+                    <input type="date" id="sexo">
+                </div>
+            </div>
+
+            <button>Criar conta</button>
+            <p class="conta">Já possuí uma conta? <a href="assets/">Entre</a></p>
         </div>
-    </div>
+    </main>
+    <main class="imagem">
+        <img src="assets/img/cadastro-fundo.png" alt="">
+    </main>
 </body>
 
 </html>
