--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -22,8 +22,8 @@
                 <button>Quiz</button>
             </div>
             <div class="acesso">
-                <button class="entrar">Entrar</button>
-                <button class="cadastro">Cadastrar</button>
+                <button class="entrar" onclick="window.location = 'login.html'">Entrar</button>
+                <button class="cadastro" onclick="window.location = 'cadastro.html'">Cadastrar</button>
             </div>
         </nav>
         <div class="linha">
