--- a/Website/public/cadastro.html
+++ b/Website/public/cadastro.html
@@ -12,38 +12,56 @@
 
     <button class="voltar" onclick="window.location = 'index.html'">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M6 12H18M6 12L11 7M6 12L11 17" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M6 12H18M6 12L11 7M6 12L11 17" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
     </button>
     <main class="main_formulario">
         <div class="formulario">
-            <h2>Bem-Vindo</h2>
             <h1>Cadastra-se</h1>
+
+            <label for="">Nome de usúario:</label>
+            <input id="input_nome" type="text" placeholder="Coloque seu nome de usúario">
+
             <label for="">Email:</label>
-            <input type="text" placeholder="Ex: usuario123@gmail.com">
-            <label for="">Nome de usúario</label>
-            <input type="text" placeholder="Coloque seu nome de usúario">
-            <label for="">Senha</label>
-            <input type="text" placeholder="Define sua senha">
+            <input id="input_email" type="text" placeholder="Ex: usuario123@gmail.com">
+
+            <label for="">Senha:</label>
+            <input input_senha type="text" placeholder="Define sua senha">
+
             <p class="condicao">Contém pelo menos 8 caracter </p>
             <p class="condicao">Contém pelo menos um caracter especial </p>
             <p class="condicao">Contém pelo menos um caracter maiúsculo </p>
+
             <div class="caixa-pai">
                 <div class="caixa">
-                    <label>Sexo</label>
-                    <select name="" id="">
+                    <label>Sexo:</label>
+                    <select id="select">
                         <option value="">Feminino</option>
                         <option value="">Masculino</option>
                     </select>
                 </div>
+
                 <div class="caixa">
-                    <label for="">Data de Nascimento</label>
+                    <label for="">Data de Nascimento:</label>
                     <input type="date" id="sexo">
                 </div>
             </div>
 
-            <button>Criar conta</button>
-            <p class="conta">Já possuí uma conta? <a href="assets/">Entre</a></p>
+            <label for="">Nivel no xadrez:</label>
+            <div class="linha_radio">
+                <div class="caixa_radio">
+                    <input type="radio" name="input_nivel" class="radio"> <label>Iniciante</label>
+                </div>
+                <div class="caixa_radio">
+                    <input type="radio" name="input_nivel" class="radio"> <label>Intermediário</label>
+                </div>
+                <div class="caixa_radio">
+                    <input type="radio" name="input_nivel" class="radio"> <label>Experiente</label>
+                </div>
+            </div>
+
+            <button onclick="cadastrar()">Criar conta</button>
+            <p class="conta">Já possuí uma conta? <a href="login.html">Entrar</a></p>
         </div>
     </main>
     <main class="imagem">
@@ -52,3 +70,105 @@
 </body>
 
 </html>
+
+<script>
+
+    // Array para armazenar empresas cadastradas para validação de código de ativação 
+    function cadastrar() {
+        // aguardar();
+
+        //Recupere o valor da nova input pelo nome do id
+        // Agora vá para o método fetch logo abaixo
+        var nomeVar = input_nome.value;
+        var emailVar = input_email.value;
+        var senhaVar = input_senha.value;
+        var sexoVar = input_sexo.value;
+        var nascimentoVar = input_nascimento.value;
+        var nivelVar = input_nivel.value;
+        
+        // Verificando se há algum campo em branco
+        if (
+            nomeVar == "" ||
+            emailVar == "" ||
+            senhaVar == "" ||
+            sexoVar == "" ||
+            nascimentoVar == "" ||
+            nivelVar == ""
+        ) {
+            console.log("Mensagem de erro para todos os campos em branco");
+            finalizarAguardar();
+            return false;
+        } else {
+            setInterval(sumirMensagem, 5000);
+        }
+
+        // Enviando o valor da nova input
+        fetch("/usuarios/cadastrar", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+                // crie um atributo que recebe o valor recuperado aqui
+                // Agora vá para o arquivo routes/usuario.js
+                nomeServer: nomeVar,
+                emailServer: emailVar,
+                senhaServer: senhaVar,
+                sexoServer: sexoVar,
+                nascimentoServer: nascimentoVar,
+                nivelServer:nivelVar
+            }),
+        })
+            .then(function (resposta) {
+                console.log("resposta: ", resposta);
+
+                if (resposta.ok) {
+                    // cardErro.style.display = "block";
+
+                    // mensagem_erro.innerHTML =
+                    //     "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
+
+                    
+
+                    setTimeout(() => {
+                        window.location = "login.html";
+                    }, "2000");
+
+                    limparFormulario();
+                    finalizarAguardar();
+                } else {
+                    throw "Houve um erro ao tentar realizar o cadastro!";
+                }
+            })
+            .catch(function (resposta) {
+                console.log(`#ERRO: ${resposta}`);
+                finalizarAguardar();
+            });
+
+        return false;
+    }
+
+    // Listando empresas cadastradas 
+    function listar() {
+        fetch("/empresas/listar", {
+            method: "GET",
+        })
+            .then(function (resposta) {
+                resposta.json().then((empresas) => {
+                    empresas.forEach((empresa) => {
+                        listaEmpresasCadastradas.push(empresa);
+
+                        console.log("listaEmpresasCadastradas")
+                        console.log(listaEmpresasCadastradas[0].codigo_ativacao)
+                    });
+                });
+            })
+            .catch(function (resposta) {
+                console.log(`#ERRO: ${resposta}`);
+            });
+    }
+
+    function sumirMensagem() {
+        cardErro.style.display = "none";
+    }
+</script>
