--- a/Website/public/login.html
+++ b/Website/public/login.html
@@ -23,19 +23,20 @@
             </caixa>
             <div class="caixa">
                 <label for="">Email:</label>
-                <input type="text" placeholder="Ex: usuario123@gmail.com">
+                <input id="input_email" type="text" placeholder="Ex: usuario123@gmail.com">
             </div>
+
             <div class="caixa">
                 <label for="">Senha</label>
                 <div class="senha">
-                    <input class="input_senha" type="text" placeholder="Define sua senha">
+                    <input id="input_senha" class="input_senha" type="text" placeholder="Define sua senha">
                     <button class="mostrar">
                         <img src="assets/img/aberto-icon.svg" alt="">
                     </button>
                 </div>
             </div>
 
-            <button>Entrar</button>
+            <button onclick="entrar()">Entrar</button>
             <p class="conta">Não possuí uma conta? <a href="assets/">Cadastre-se</a></p>
         </div>
     </main>
@@ -45,3 +46,59 @@
 </body>
 
 </html>
+
+<script>
+    
+function entrar() {
+
+    var emailVar = input_email.value;
+    var senhaVar = input_senha.value;
+
+    console.log("FORM LOGIN: ", emailVar);
+    console.log("FORM SENHA: ", senhaVar);
+
+    fetch("/usuarios/autenticar", {
+        method: "POST",
+        headers: {
+            "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+            emailServer: emailVar,
+            senhaServer: senhaVar
+        })
+    }).then(function (resposta) {
+        console.log("ESTOU NO THEN DO entrar()!")
+
+        if (resposta.ok) {
+            console.log(resposta);
+
+            resposta.json().then(json => {
+                console.log(json);
+                console.log(JSON.stringify(json));
+                localStorage.setItem("idEmpresa", json.id);
+                sessionStorage.EMAIL_USUARIO = json.email;
+                sessionStorage.NOME_USUARIO = json.nome;
+                sessionStorage.ID_USUARIO = json.id;
+
+                window.location = "index.html";
+            });
+
+            window.location = "index.html"
+
+        } else {
+
+            console.log("Houve um erro ao tentar realizar o login!");
+
+            resposta.text().then(texto => {
+                console.error(texto);
+                alert('senha errada')
+            });
+        }
+
+    }).catch(function (erro) {
+        console.log(erro);
+    })
+
+    return false;
+}
+</script>
