--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -20,6 +20,7 @@
                 <button>Campeões</button>
                 <button>Figuras Hitóricas</button>
                 <button>Quiz</button>
+                <button id="dashboard">Dashboard</button>
             </div>
             <div class="acesso">
                 <button class="entrar" onclick="window.location = 'login.html'">Entrar</button>
@@ -84,7 +85,7 @@
             </section>
         </div>
     </main>
-        <main class="moderno">
+    <main class="moderno">
         <div class="filtro">
             <section>
                 <h1>O Xadrez Chega à Europa</h1>
@@ -99,3 +100,17 @@
 </body>
 
 </html>
+
+<script>
+    window.onload = () => {
+        var id = sessionStorage.CARGO
+
+        if(id == 0){
+            document.getElementById('dashboard').style.display = 'none'
+        }else{
+            document.getElementById('dashboard').style.display = 'flex'
+        }
+
+        console.log(id)
+    }
+</script>
