--- a/Website/public/login.html
+++ b/Website/public/login.html
@@ -48,7 +48,7 @@
 </html>
 
 <script>
-    
+
 function entrar() {
 
     var emailVar = input_email.value;
@@ -75,10 +75,10 @@ function entrar() {
             resposta.json().then(json => {
                 console.log(json);
                 console.log(JSON.stringify(json));
-                localStorage.setItem("idEmpresa", json.id);
                 sessionStorage.EMAIL_USUARIO = json.email;
                 sessionStorage.NOME_USUARIO = json.nome;
                 sessionStorage.ID_USUARIO = json.id;
+                sessionStorage.CARGO = json.cargo;
 
                 window.location = "index.html";
             });
