realização da função de esconder senha

--- a/Website/public/login.html
+++ b/Website/public/login.html
@@ -30,9 +30,9 @@
             <div class="caixa">
                 <label for="">Senha</label>
                 <div class="senha">
-                    <input id="input_senha" class="input_senha" type="text" placeholder="Define sua senha">
-                    <button class="mostrar">
-                        <img src="assets/img/aberto-icon.svg" alt="">
+                    <input id="input_senha" class="input_senha" type="password" placeholder="Define sua senha">
+                    <button class="mostrar" id="buttonSenha" onclick="mostrarSenha()">
+                        <img id="img_olho" src="assets/img/fechado-icon.svg" alt="">
                     </button>
                 </div>
             </div>
