--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -108,7 +108,7 @@
 
     function limparSessao() {
         sessionStorage.clear();
-        window.location = "index.html";
+        window.location.reload();
         console.log('limpou')
     }
 
