criação do quiz e da confiruração

--- a/Website/public/cadastro.html
+++ b/Website/public/cadastro.html
@@ -68,7 +68,7 @@
         </div>
     </main>
     <main class="imagem">
-        <img src="assets/img/login_fundo.png" alt="">
+        <img src="assets/img/teste.png" alt="">
     </main>
 </body>
 
@@ -86,7 +86,7 @@
         if (senha.toLowerCase() != senha) {
             letraMaiuscula = true
         }
-        
+
         if (letraMaiuscula == true) {
             document.getElementById("maiusculo").style.color = 'green';
         } else {
