--- a/Website/public/login.html
+++ b/Website/public/login.html
@@ -42,7 +42,7 @@
         </div>
     </main>
     <main class="imagem">
-        <img src="assets/img/cadastro-fundo.png" alt="">
+        <img src="assets/img/teste2.png" alt="">
     </main>
 </body>
 
