--- a/Website/public/quizes.html
+++ b/Website/public/quizes.html
@@ -140,7 +140,7 @@
         }
     ]
     // variáveis globais    
-    var id = sessionStorage.ID_USUARIO
+    var idusuario = sessionStorage.ID_USUARIO
     let numeroDaQuestaoAtual = 0
     let pontuacaoFinal = 0
     let tentativaIncorreta = 0
@@ -160,12 +160,12 @@
 
     function iniciarQuiz(quiz, escondido1, escondido2, idDoquiz) {
         tempo = setInterval(() => {
-            if(contador == 60){
-                minutos++
-                contador = 0
-            }else{
-            contador++;
-            }
+            // if (contador == 60) {
+            //     minutos++
+            //     contador = 0
+            // } else {
+                 contador++;
+            // }
             console.log("Contador:", contador);
         }, 1000); // 1000 ms = 1 segundo
 
@@ -307,14 +307,16 @@
         for (let i = 0; i < options.length; i++) {
             options[i].checked = false;
         }
-    }
+    };
 
+    var  porcentagemFinalDeAcertos = 0
     function finalizarJogo() {
         let textoParaMensagemFinal = null
         let classComCoresParaMensagemFinal = null
-        const porcentagemFinalDeAcertos = pontuacaoFinal / quantidadeDeQuestoes
+        porcentagemFinalDeAcertos = pontuacaoFinal / quantidadeDeQuestoes
         clearInterval(tempo);
-        alert(minutos + ':' + contador)
+        // alert(minutos + ':' + contador)
+        
 
         if (porcentagemFinalDeAcertos <= 0.3) {
             textoParaMensagemFinal = "Parece que você não estudou..."
@@ -342,6 +344,42 @@
         btnSubmeter.disabled = true
         // btnConcluir.disabled = true
         btnTentarNovamente.disabled = false
+        guardar()
 
+    }
+
+
+    function guardar() {
+        // Enviando o valor da nova input
+        fetch("/quiz/guardar", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+                quizServer: idQuiz,
+                certasServer: certas,
+                erradasServer: erradas,
+                usuarioServer: idusuario,
+                contadorServer: contador,
+                porcentagemServer: porcentagemFinalDeAcertos
+            }),
+        })
+            .then(function (resposta) {
+                console.log("resposta: ", resposta);
+
+                if (resposta.ok) {
+
+                    alert("Cadastro realizado com sucesso! Redirecionando para tela de Login...")
+
+                } else {
+                    throw "Houve um erro ao tentar realizar o cadastro!";
+                }
+            })
+            .catch(function (resposta) {
+                console.log(`#ERRO: ${resposta}`);
+            });
+
+        return false;
     }
 </script>
