--- a/Website/public/quiz.html
+++ b/Website/public/quiz.html
@@ -22,6 +22,7 @@
         </div>
         <div class="acesso">
             <button id="button_sair" class="sair" onclick="limparSessao()">Sair</button>
+            <button id="button_sair" class="sair" onclick="limparSessao()">Sair</button>
             <button id="button_entrar" class="entrar" onclick="window.location = 'login.html'">Entrar</button>
             <button id="button_cadastrar" class="cadastro"
                 onclick="window.location = 'cadastro.html'">Cadastrar</button>
@@ -32,3 +33,34 @@
 </body>
 
 </html>
+
+<script>
+    function limparSessao() {
+        sessionStorage.clear();
+        window.location.reload();
+        console.log('limpou')
+    }
+
+    window.onload = () => {
+
+        var id = sessionStorage.CARGO
+        var idusuario = sessionStorage.ID_USUARIO
+
+        if (idusuario == null) {
+            document.getElementById('button_entrar').style.display = 'flex';
+            document.getElementById('button_cadastrar').style.display = 'flex';
+        } else {
+            document.getElementById('button_sair').style.display = 'flex';
+            document.getElementById('button_entrar').style.display = 'none';
+            document.getElementById('button_cadastrar').style.display = 'none';
+        }
+
+        if (id == 1) {
+            document.getElementById('dashboard').style.display = 'flex'
+        } else {
+            document.getElementById('dashboard').style.display = 'none'
+        }
+
+        console.log(id)
+    }
+</script>
