realização da tela de histórico

--- a/Website/public/login.html
+++ b/Website/public/login.html
@@ -38,7 +38,7 @@
             </div>
 
             <button onclick="entrar()">Entrar</button>
-            <p class="conta">Não possuí uma conta? <a href="assets/">Cadastre-se</a></p>
+            <p class="conta">Não possuí uma conta? <a href="cadastro.html">Cadastre-se</a></p>
         </div>
     </main>
     <main class="imagem">
