--- a/Website/public/quizes.html
+++ b/Website/public/quizes.html
@@ -146,7 +146,24 @@
         </div>
     </main>
     <main id="historico" style="height: 100vh; width: 84vw;display: none;">
+        <div class="div_pai">
+            <h1 class="titulo">HISTÓRICO</h1>
 
+            <div class="scroll_historico">
+                <section>
+                    <div class="legenda">
+                        <span>QUIZ</span>
+                        <span>ACERTOS</span>
+                        <span>ERROS</span>
+                        <span>TEMPO</span>
+                        <span>PORCENTAGEM</span>
+                        <span>REALIZAÇÃO</span>
+                    </div>
+                    <div class="scroll" id="scroll">
+                    </div>
+                </section>
+            </div>
+        </div>
     </main>
 </body>
 
@@ -156,7 +173,8 @@
     function mostrarHistorico() {
         document.getElementById('historico').style.display = 'flex'
         document.getElementById('usarquiz').style.display = 'none'
-        document.getElementById('quiz').style.display = 'none'
+        document.getElementById('quiz').style.display = 'none';
+        exibirHistorico()
     }
 
     var escolhido = ''
@@ -467,5 +485,36 @@
             });
 
         return false;
+    }
+
+    function exibirHistorico() {
+        fetch(`/historico/listar/${idusuario}`, {
+            method: 'GET'
+        })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error("Erro ao buscar sensores");
+                }
+                return response.json();
+            })
+            // .then(sensores => {
+            .then(historicos => {
+                const container = document.getElementById("scroll");
+                container.innerHTML = "";
+
+                historicos.forEach(historico => {
+                    container.innerHTML += `<div class="dados">
+                            <span class="txt_viveiro">${historico.idQuiz}</span>
+                            <span class="txt_sensor">${historico.acertos}</span>
+                            <span class="txt_data">${historico.erros}</span>
+                            <span class="txt_ppm">${historico.tempo}</span>
+                            <span class="txt_alerta">${historico.porcentagem}</span>
+                            <span class="txt_alerta">${historico.dtRealizacao}</span>
+                        </div>`
+                });
+            })
+            .catch(error => {
+                console.error("Erro ao buscar sensores:", error);
+            });
     }
 </script>
